--- a/sass/app.css
+++ b/sass/app.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
 :root {
-  --main-color: #BA39A6;
-  --second-color: #E958A2;
+  --main-color:#BA39A6;
+  --second-color:#E958A2;
+  --text-color:#650061;
 }
 
 body, html {
@@ -11,38 +12,80 @@ body, html {
 
 .main-slide {
   background-image: linear-gradient(50deg, var(--main-color) 0%, var(--second-color) 100%);
-  height: 140vh;
+}
+
+.main-slide .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 10px;
+}
+
+.main-slide .container .color-pickers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: whitesmoke;
+  border-radius: 30px;
+  width: 300px;
+  height: 50px;
+}
+
+.main-slide .container .color-pickers input {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 30px;
+  height: 30px;
 }
 
 .main-slide .side-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
   background-image: url(../images/Exams-bro.svg);
-  background-size: 50%;
+  height: 100vh;
+  background-size: 40%;
   background-position: bottom right;
   background-repeat: no-repeat;
 }
 
 .main-slide .side-image .content-wrapper {
+  padding-left: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  padding-left: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-slide .side-image .content-wrapper h1 {
+  font-family: 'Roboto Slab';
   font-size: 60px;
+  font-weight: 400;
   margin: 0;
+  color: whitesmoke;
 }
 
 .main-slide .side-image .content-wrapper p {
   font-size: 30px;
   margin: 0;
-  margin-top: 10px;
+  margin-top: 5px;
+  color: var(--text-color);
 }
 
 .main-slide .side-image .content-wrapper .actions {
@@ -54,9 +97,13 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .main-slide .side-image .content-wrapper a {
+  color: var(--text-color);
   text-decoration: none;
   padding: 10px;
   background-color: whitesmoke;
@@ -69,6 +116,11 @@ body, html {
 
 .main-slide .side-image .content-wrapper span {
   position: absolute;
-  bottom: 10px;
+  bottom: 5px;
+}
+
+.c {
+  background-size: auto;
+  height: 130vh;
 }
 /*# sourceMappingURL=app.css.map */
