--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
 :root {
-    --main-color: #BA39A6;
-    --second-color: #E958A2;
-    --text-color: #650061;
+    --main-color:#BA39A6;
+    --second-color:#E958A2;
+    --text-color:#650061;
 }
 
 body, html {
@@ -13,35 +13,63 @@ body, html {
 
 .main-slide {
     background-image: linear-gradient(50deg, var(--main-color) 0%, var(--second-color) 100%);
-    height: 140vh;
+
+    .container {
+        display: flex;
+        justify-content: center;
+        padding-top: 10px;
+
+        .color-pickers {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            background-color: whitesmoke;
+            border-radius: 30px;
+            width: 300px;
+            height: 50px;
+            
+            input {
+                flex-direction: row;
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
 
     .side-image {
+        display: flex;
+        justify-content: baseline;
         background-image: url(../images/Exams-bro.svg);
-        background-size: 50%;
+        height: 100vh;
+        background-size: 40% ;
         background-position: bottom right;
         background-repeat: no-repeat;
 
         .content-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-content: center;
             padding-left: 50px;
+            display: flex;
+            align-items: center;
     
             h1 {
+                font-family: 'Roboto Slab';
                 font-size: 60px;
+                font-weight: 400;
                 margin: 0;
+                color: whitesmoke;
             }
     
             p {
                 font-size: 30px;
                 margin: 0;
-                margin-top: 10px;
+                margin-top: 5px;
+                color: var(--text-color);
             }
     
             .actions {
                 margin-top: 30px;
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
             }
 
             a {
@@ -56,8 +84,13 @@ body, html {
     
             span {
                 position: absolute;
-                bottom: 10px;
+                bottom: 5px;
             }
         }
     }
+}
+
+.c {
+    background-size: auto;
+    height: 130vh;
 }
