--- a/sass/app.scss
+++ b/sass/app.scss
@@ -25,13 +25,16 @@ body, html {
             align-items: center;
             background-color: whitesmoke;
             border-radius: 30px;
-            width: 300px;
-            height: 50px;
+            width: 20vw;
+            height: 6vh;
             
             input {
-                flex-direction: row;
                 width: 30px;
                 height: 30px;
+            }
+
+            label {
+                color: var(--text-color);
             }
         }
     }
@@ -46,11 +49,13 @@ body, html {
         background-repeat: no-repeat;
 
         .content-wrapper {
-            padding-left: 50px;
+            padding-left: 70px;
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            align-self: center;
+            padding-bottom: 80px;
     
-            h1 {
+            h1 {   
                 font-family: 'Roboto Slab';
                 font-size: 60px;
                 font-weight: 400;
@@ -66,7 +71,7 @@ body, html {
             }
     
             .actions {
-                margin-top: 30px;
+                margin-top: 20px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -77,14 +82,18 @@ body, html {
                 text-decoration: none;
                 padding: 10px;
                 background-color: whitesmoke;
-                width: fit-content;
-                border-radius: 20px;
-                margin-top: 5px;
+                border-radius: 25px;
+                margin-top: 10px;
+                width: 11vw;
+                height: 4vh;
+                font-size: 25px;
+                text-align: center;
             }
     
             span {
+                color: var(--text-color);
                 position: absolute;
-                bottom: 5px;
+                bottom: -30px;
             }
         }
     }
